--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@babel/preset-react": "^7.16.7",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
     "@szhsin/react-menu": "^3.0.0",
     "axios": "^0.26.1",
     "css-loader": "^6.7.1",
     "express": "^4.17.3",
     "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
     "postcss-loader": "^6.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
